2006-10-20  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* po/lilypond.pot: update.

	* Documentation/topdocs/NEWS.tely (Top): remove TODOs.

	* Documentation/user/global.itely (File structure): remove
	\addqoute remark.

	* lily/parser.yy (FIXME): remove ADDQUOTE

	* Documentation/user/global.itely (Extracting fragments of
	notation): new node, about clip systems.

	* Documentation/user/lilypond-book.itely (Many quotes of a large
	score): ref to clip systems.

	* Documentation/user/instrument-notation.itely (Entering lyrics):
	add note about lyric ties and required font.

	* lily/open-type-font.cc (glyph_list): format errors.

	* Documentation/user/programming-interface.itely (Scheme
	procedures as properties): more doco on simple-closure and scheme
	callbacks.
	(Input variables and Scheme): use lilypond[verbatim], document
	dummy statement.

	* Documentation/user/page.itely (Displaying spacing): use \book
	explicitly, so arrows show .
	(Line breaking): add note about Forbid_line_break_engraver

	* Documentation/user/tweaks.itely (Common tweaks): also set length
	to prevent tie squeezing. 
	(Default files): use @var{}

	* Documentation/user/converters.itely (Invoking abc2ly): remove mup2ly.
	(Generating LilyPond files): add FOMUS.

2006-10-20  Joe Neeman  <joeneeman@gmail.com>

	* scm/define-grobs.scm (all-grob-descriptions): set side-axis and
	Y-offset for TextScript and Script

	* lily/text-engraver.cc (make_item): 
	* lily/script-engraver.cc (make_script_from_event):
	remove call to Side_position_interface::set_axis since all scripts
	now have this set by default

	* lily/context.cc: 
	* lily/prob.cc: use variables

2006-10-20  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/page-turn-engraver.cc (acknowledge_note_head): don't look
	at typography, rather analyse stream event duration. 

	* Documentation/user/page.itely (Page formatting): set a6 paper
	for system separator example.
	
	* lily/arpeggio.cc (Module): idem.
