@@ -1,3 +1,9 @@
+2006-10-21  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* buildscripts/output-distance.py (test_basic_compare): add
+	multipage test.
+	(FileLink.multi_img_cell): new file, glob .png images.
+
 2006-10-20  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* po/lilypond.pot: update.
